--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -2,7 +2,7 @@
 $color1 : #f18841;
 $color2 : #f18741c4;
 
-body, html {
+html {
     width: 100%;
     height: fit-content;
     align-items: center;
@@ -11,8 +11,16 @@ body, html {
     padding: 0 !important;
 }
 
-container {
+body {
+    font-family: 'Open Sans', sans-serif;
+    color: black;
+    width: 100%;
+    //height: fit-content;
     height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0 !important;
 }
 
 a {
@@ -23,11 +31,6 @@ a {
     /*background-color: #f0780e;*/
     background-color: transparent;
 
-}
-
-body {
-    font-family: 'Open Sans', sans-serif;
-    color: black;
 }
 
 .bg-orange {
@@ -69,14 +72,17 @@ body {
     color:crimson;
 }
 
-.header, .footer {
+.footer {
     width: 100%;
     height: fit-content;
     text-align: center;
 }
 
 .header {
-    padding: 2em;
+    width: 100%;
+    height: fit-content;
+    text-align: center;
+    padding: 1em;
     justify-content: space-between;
     font-family: 'Open Sans', sans-serif;
     height: fit-content;
@@ -105,8 +111,8 @@ body {
             //color: #f18841;
             //background-color: none;
             border-bottom: solid white 1px;
-            -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px -2px 15px 5px rgba(0,0,0,0); 
-            box-shadow: 0px 10px 13px -7px #000000, 0px -2px 15px 5px rgba(0,0,0,0);
+            //-webkit-box-shadow: 0px 10px 13px -7px #000000, 0px -2px 15px 5px rgba(0,0,0,0); 
+            //box-shadow: 0px 10px 13px -7px #000000, 0px -2px 15px 5px rgba(0,0,0,0);
         }
         
     }
@@ -166,10 +172,10 @@ td {
 }
 
 #softwareSearch {
-    height: 70vh;
+    //height: 70vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -208,6 +214,12 @@ table.dataTable thead .sorting_desc_disabled:before {
   }
 
   #filter {
+    display: block;
+    position: sticky;
+    top: 80px;
+}
+
+.sticky-scroll {
     display: block;
     position: sticky;
     top: 80px;
