--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,10 @@
         <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <!--
         <link rel="icon" type="image/png" href="{{ asset('img/Logo Winback.png') }}" />
+        -->
+        <link rel="icon" type="image/png" href="{{ asset('img/logo_black.ico') }}" />
         {% block stylesheets %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
