--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -3,45 +3,42 @@
 {% block title %}Device{% endblock %}
 
 {% block content %}
-    <div class="container d-flex flex-column justify-content-between align-items-center">
-            <h1 class="text-center mt-4 mb-4">Device</h1>
-            <!-- ===== DEVICE TABLE ===== -->
-            <div id="listDevice" class="d-flex flex-column align-items-center w-100">
-                {% for message in app.flashes('error') %}
-                    <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
-                {% endfor %}
-                    <!--
-                    <div class="p-3 my-2 rounded-2 alert alert-warning" id="selectedZone"></div>
-                    -->
-                {% for message in app.flashes('infoDevice') %}
-                    <div class="p-3 my-2 rounded-2 alert alert-success">{{ message }}</div>
-                {% endfor %}
-                
-                
-                <div class="row">
-                    <div class="col-md-3">
-                        {% include "device/_filter.html.twig" %}
-                        {#
-                        {{ form(searchform) }}
-                        #}
-                        <!-- Button to add device table -->
-                        {% if is_granted("ROLE_SUPER") %}
-                            <button id="floatingBtn" class="btn bg-orange btn-outline-orange" 
-                            style="border: none; border-radius: 50%; height: 4em; width: 4em; box-shadow: 2px 2px 3px #999;" 
-                            type="button"
-                            data-bs-target="#modal_upload"
-                            data-id="{{device.id}}"
-                            data-title="{{device.sn}}"
-                            data-bs-toggle="modal">
-                                <i class="fa-solid fa-plus"></i>
-                            </button>
-                        {% endif %}
-                    </div>
-                    <div class="col-md-9">
-
+    <div class="container-fluid d-flex flex-column justify-content-between align-items-center">
+            <div class="row w-100 mt-4">
+                <div class="col-md-3 col-lg-2">
+                    {% include "device/_filter.html.twig" %}
+                    {#
+                    {{ form(searchform) }}
+                    #}
+                    <!-- Button to add device table -->
+                    {% if is_granted("ROLE_SUPER") %}
+                        <button id="floatingBtn" class="btn bg-orange btn-outline-orange" 
+                        style="border: none; border-radius: 50%; height: 4em; width: 4em; box-shadow: 2px 2px 3px #999;" 
+                        type="button"
+                        data-bs-target="#modal_upload"
+                        data-id="{{device.id}}"
+                        data-title="{{device.sn}}"
+                        data-bs-toggle="modal">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
+                    {% endif %}
+                </div>
+                <!-- ===== DEVICE TABLE ===== -->
+                <div class="col-md-9 col-lg-10">
+                    <h1 class="text-center mt-4 mb-4">Device</h1>
+                    {% for message in app.flashes('error') %}
+                        <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
+                    {% endfor %}
+                        <!--
+                        <div class="p-3 my-2 rounded-2 alert alert-warning" id="selectedZone"></div>
+                        -->
+                    {% for message in app.flashes('infoDevice') %}
+                        <div class="p-3 my-2 rounded-2 alert alert-success">{{ message }}</div>
+                    {% endfor %}
+                    <div id="listDevice" class="w-100">
                         <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true">
-                                <thead class="w-100 align-middle">
+                                <thead class="w-100 align-middle sticky-scroll">
                                     <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
                                         <th scope="col"></th>
                                         <th scope="col" class="h-100">
@@ -60,14 +57,13 @@
                                         {% endif %}
                                         <th scope="col" class="text-center">Forced</th>
                                         <th scope="col" class="text-center">Info</th>
-                                        <!--
-                                        <th scope="col" class="text-center">Connect</th>
-                                        -->
+                                        <th scope="col" class="text-center">Comment</th>
+                                        
                                     </tr>
                                     <tr class="w-100 align-bottom">
                                         <th class="text-center">
                                         {% if is_granted("ROLE_ADMIN") or is_granted("ROLE_SUPER") or is_granted("ROLE_SAV") %}
-                                                                         
+                                                                        
                                             {{ form_start(checkform) }}
                                                 <div class="row">
                                                     <div class="col form-field form-inline">
@@ -115,7 +111,7 @@
                                                 </label>
                                                 </div>
                                             </td>
-                                            <td class="text-center">{{device.sn}}</td>
+                                            <td class="text-center text-nowrap">{{device.sn}}</td>
                                             <td class="text-center">{{device.deviceFamily}}</td>
                                             <td class="text-center">{{device.version}}</td>
                                             <td class="text-center version-upload" id="test_zone_{{device.id}}">{{device.versionUpload}}</td>
@@ -147,7 +143,9 @@
                                                 <i class="fa-solid fa-circle-info"></i>
                                                 </a>
                                             </td>
-                                            
+                                            <td class="text-break">
+                                                {{device.comment}}
+                                            </td>
                                         </tr>
                                     {% endfor %}
                                     
@@ -155,10 +153,10 @@
                             </table>
                             
                         </div>
-                        {{ knp_pagination_render(devices) }}
                     </div>
+
+                    {{ knp_pagination_render(devices) }}
                 </div>
-                
                 <!-- ===== UPLOAD MODALS ===== -->
                 {% include 'device/upload_modals.html.twig' %}
 
