--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
 html {
   width: 100%;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: 100%;
   align-items: center;
   justify-content: center;
   margin: 0;
@@ -12,13 +10,31 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif;
-  color: black;
+  color: #000000;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin: 0;
   padding: 0 !important;
+  background-color: #ffffff;
+}
+
+h1, h2 {
+  font-weight: bold;
+  font-size: xx-large;
+  font-style: normal;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -74,16 +90,23 @@ a {
   text-align: center;
 }
 
+/*
+.custom-class {
+    display: none;
+  }
+  @include media-breakpoint-up(sm) {
+
+  }
+*/
 .header {
+  display: flex !important;
   width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   text-align: center;
   padding: 1em;
-  justify-content: space-between;
   font-family: "Open Sans", sans-serif;
-  height: fit-content;
 }
 .header .navbar-brand {
   text-align: center;
@@ -94,17 +117,34 @@ a {
   text-transform: uppercase;
 }
 
+@media (max-width: 800px) {
+  .header {
+    display: none !important;
+  }
+}
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
 .navbar {
   font-family: "Open Sans", sans-serif;
   display: flex;
   justify-content: space-between;
+  flex-wrap: nowrap;
 }
 .navbar .nav-link {
   text-transform: uppercase;
+  font-family: "NotoSansExtraCondensedBold";
+  font-size: larger;
+  font-style: normal;
+  letter-spacing: 2px;
   margin: 0 1em 0 1em;
   color: white;
 }
 .navbar .nav-link:hover {
+  border-bottom: solid white 1px;
+}
+.navbar .nav-link:active {
   border-bottom: solid white 1px;
 }
 .navbar #logo {
@@ -212,4 +252,15 @@ table.dataTable thead .sorting_desc_disabled:before {
   position: -webkit-sticky;
   position: sticky;
   top: 80px;
+}
+
+.login {
+  border-radius: 5px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  box-shadow: 5px 5px 15px 5px #acabab;
 }/*# sourceMappingURL=styles.css.map */
