--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,13 +9,15 @@
         <!--
         <link rel="icon" type="image/png" href="{{ asset('img/Logo Winback.png') }}" />
         -->
-        <link rel="icon" type="image/png" href="{{ asset('img/logo_black.ico') }}" />
+        <link rel="icon" type="image/png" href="{{ asset('img/favicon.ico') }}" />
         {% block stylesheets %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
         {% endblock %}
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/noto-sans-extracondensed" type="text/css"/>
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script type="text/javascript" src="{{ asset('js/jquery-3.3.1.min.js')}}"></script>
         <script src="https://kit.fontawesome.com/06466c4cae.js" crossorigin="anonymous"></script>
         
@@ -24,9 +26,9 @@
         <script type="text/javascript" src="{{ asset('js/scripts.js')}}" defer></script>
     </head>
 
-    <body class="layout">
+    <body>
         {% include 'includes/_header.html.twig' %}
-        <main>
+        <main class="container-fluid">
             {% block content %}
             {% endblock %}
         </main>
