--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="footer primary mt-2 pt-2 pb-2 bg-light fixed-bottom">
+<footer class="footer primary mt-2 pt-2 pb-2 bg-light">
 Copyright © 2022
 </footer>
