--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,22 +1,38 @@
-<header class="header shadow d-flex justify-content-center">
-        <div data-target="example-sidenav" class="press sidenav-trigger flex-1">
-            <i class="fa-solid fa-ellipsis-vertical"></i>
-        </div>
-        <a class="navbar-logo w-100 flex-2" href="{{path('device')}}">
-            <img src="{{asset('img/winback-logo.webp')}}" alt="Logo" class="logo" style="height: 50px;">
-        </a>
-        <div class="navbar-menu flex-1">
-            <a class="navbar-link" href="{{path('app_logout')}}">
-                <i class="fa fa-sign-out" aria-hidden="true"></i> Logout
+<div class="w-100">
+    <header class="header shadow d-flex justify-content-center">
+            <div data-target="example-sidenav" class="press sidenav-trigger flex-1">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+            </div>
+            <a class="navbar-logo w-100 flex-2" href="{{path('home')}}">
+                <img src="{{asset('img/winback-logo.webp')}}" alt="Logo" class="logo" style="height: 50px;">
+            </a>
+            <div class="navbar-menu flex-1">
+                <a class="navbar-link" href="{{path('app_logout')}}">
+                    <i class="fa fa-sign-out" aria-hidden="true"></i> Logout
+                </a>
+            </div>
+    </header>
+    <nav class="navbar navbar-expand-md sticky-top shadow primary bg-orange">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><i class="fa-solid fa-bars text-white"></i></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li><a class="nav-link" href="{{path('home')}}"><i class="fa-solid fa-house"></i></a></li>
+                <li><a class="nav-link" href="{{path('software')}}">Software</a></li>
+                <li><a class="nav-link" href="{{path('device')}}">Device</a></li>
+                <li><a class="nav-link" href="{{path('dashboard')}}">Dashboard</a></li>
+                <!--<a class="nav-link" href="{{path('statistics')}}">Statistics</a>-->
+                <!--<a class="nav-link" href="">Maintenance</a>-->
+            </ul>
+            <a class="nav-link" href="{{path('app_logout')}}">
+                <i class="fa fa-sign-out text-white" aria-hidden="true"></i>
             </a>
         </div>
-</header>
-<nav class="navbar sticky-top shadow primary bg-orange d-flex justify-content-around">
-    <a class="nav-link" href="{{path('software')}}">Software</a>
-    <a class="nav-link" href="{{path('device')}}">Device</a>
-    <!--<a class="nav-link" href="{{path('statistics')}}">Statistics</a>-->
-    <!--<a class="nav-link" href="">Maintenance</a>-->
-</nav>
+
+    </nav>
+</div>
+
 <!-- ##### Sidenav ##### -->
 <!--
 <div class="sidenav shadow-1 white" id="example-sidenav" data-ax="sidenav">
