--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,49 +3,68 @@
 {% block title %}WINBACK - Login{% endblock %}
 
 {% block content %}
+   
+<div class="d-flex justify-content-center align-items-center">
 
-<div class="container d-flex flex-column align-items-center text-center justify-content-between">
-    <form method="post" style="width: 50%;" class="d-flex flex-column justify-content-between">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {{ app.user.role }}
-        {% endif %}
+    <form method="post" class="text-center row d-flex flex-column align-items-center justify-content-around mt-2 mb-2 mt-sm-2 mb-sm-2 pt-1 pb-1 pt-sm-2 pb-sm-2 px-2 login">
+            <span class="fa-stack fa-3x" style="position: relative; top: -40px;">
+                <i class="fa-solid fa-circle fa-stack-2x" style="color: #f18841;"></i>
+                <i class="fa-regular fa-user fa-stack-1x fa-inverse"></i>
+            </span>
+            <h2 class="mt-1 mb-1 mt-sm-2 mb-sm-2">Login</h2>
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {{ app.user.role }}
+            {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout ?</a>
+            {% if app.user %}
+                <div class="mt-1 mb-1 mt-sm-2 mb-sm-2">
+                    You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout ?</a>
+                </div>
+            {% endif %}
+
+            <div class="form-outline mt-1 mb-1 mt-sm-2 mb-sm-2">
+                <!--
+                <label for="inputUsername" class="form-label">Username</label>
+                -->
+                <!--<input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>-->
+                <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
+                <input type="text" placeholder="Username" name="username" id="inputUsername" class="form-control" required autofocus>
+                </div>
             </div>
-        {% endif %}
-
-        <h4 class="mb-3 font-weight-normal">--- Sign in ---</h4>
-        <div class="form-outline mb-4">
-            <label for="inputUsername" class="form-label">Username</label>
-            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-        </div>
-        <div class="form-outline mb-4">
-            <label for="inputPassword" class="form-label">Password</label>
-            <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-        </div>
-
-        <input type="hidden" name="_csrf_token"
-            value="{{ csrf_token('authenticate') }}"
-        >
-
-        {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
-
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" name="_remember_me"> Remember me
-                </label>
+            <div class="form-outline mt-1 mb-1 mt-sm-2 mb-sm-2">
+                <!--
+                <label for="inputPassword" class="form-label">Password</label>
+                -->
+                <!--<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>-->
+                <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
+                <input type="password" placeholder="Password" name="password" id="inputPassword" class="form-control" required>
+                </div>
             </div>
-        #}
+            
+            <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+            >
+            
 
-        <button class="btn btn-lg bg-orange btn-outline-orange mb-4" type="submit">
-            Sign in
-        </button>
+            {#
+                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                See https://symfony.com/doc/current/security/remember_me.html
+
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" name="_remember_me"> Remember me
+                    </label>
+                </div>
+            #}
+
+            <button class="btn bg-orange btn-outline-orange mt-1 mb-1 mt-sm-2 mb-sm-2 w-50" type="submit">
+                Sign in
+            </button>
+            <hr style="height:2px; width:75%; border-width:0; color:gray; background-color:gray" class="mt-1 mb-1 mt-sm-2 mb-sm-2">
+            <div class="d-flex justify-content-around align-items-center w-100 p-0"><p class="mb-0">Not registered yet ?</p><a class="btn btn-secondary txt-white" href="{{ path('app_register') }}">Sign Up</a></div>
     </form>
-    <p><a href="{{ path('app_register') }}">Not registered yet ? Please subscribe here.</a></p>
 </div>
 {% endblock %}
