--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -15,8 +15,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: black;
     width: 100%;
-    //height: fit-content;
-    height: 100%;
+    height: fit-content;
+    //height: 80%;
     align-items: center;
     justify-content: center;
     margin: 0;
