--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -5,14 +5,14 @@
 {% block content %}
     <div class="container-fluid d-flex flex-column justify-content-between align-items-center">
             <div class="row w-100 mt-4">
-                <div class="col-md-3 col-lg-2">
+                <div class="col-md-3">
                     {% include "device/_filter.html.twig" %}
                     {#
                     {{ form(searchform) }}
                     #}
                     <!-- Button to add device table -->
                     {% if is_granted("ROLE_SUPER") %}
-                        <button id="floatingBtn" class="btn bg-orange btn-outline-orange" 
+                        <button id="floatingBtn" class="btn bg-orange btn-outline-orange  d-flex align-items-center justify-content-center" 
                         style="border: none; border-radius: 50%; height: 4em; width: 4em; box-shadow: 2px 2px 3px #999;" 
                         type="button"
                         data-bs-target="#modal_upload"
@@ -24,7 +24,7 @@
                     {% endif %}
                 </div>
                 <!-- ===== DEVICE TABLE ===== -->
-                <div class="col-md-9 col-lg-10">
+                <div class="col-md-9">
                     <h1 class="text-center mt-4 mb-4">Device</h1>
                     {% for message in app.flashes('error') %}
                         <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
@@ -38,7 +38,7 @@
                     <div id="listDevice" class="w-100">
                         <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true">
-                                <thead class="w-100 align-middle sticky-scroll">
+                                <thead class="w-100 align-middle">
                                     <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
                                         <th scope="col"></th>
                                         <th scope="col" class="h-100">
@@ -81,8 +81,10 @@
                                         <th id='test_zone_0'>
                                             {% if is_granted("ROLE_ADMIN") or is_granted("ROLE_SUPER") or is_granted("ROLE_SAV")%}
                                                 {{ form_start(versionform) }}
-                                                    {{form_row(versionform.versionUpload)}}
-                                                    <button type="submit" class="w-auto text-center btn bg-orange btn-outline-orange"><i class="fa-solid fa-check p-1"></i></button>
+                                                    <div class="input-group d-flex flex-nowrap">
+                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-right-radius: 0', class: 'flex-grow:1'}})}}
+                                                    <button type="submit" class="text-center btn bg-orange btn-outline-orange mb-3" style="width: fit-content"><i class="fa-solid fa-check fa-2xs"></i></button>
+                                                    </div>
                                                 {{ form_end(versionform) }}
                                             {% endif %}
                                         </th>
