--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Software{% endblock %}
 
 {% block content %}
-    <div class="container d-flex flex-column justify-content-between align-items-center">
+    <div class="container d-flex flex-column justify-content-between align-items-center w-100">
         <h1 class="text-center mt-4 mb-4">Software</h1>
         <section id="softwareSearch"></section>
         <!-- ===== ALERT MESSAGES ===== -->
@@ -16,11 +16,11 @@
         {% for message in app.flashes('infoSoftware') %}
             <div class="p-3 my-2 rounded-2 alert alert-success">{{ message }}</div>
         {% endfor %}
-        <div class="row">
+        <div class="row w-100">
             <div class="col-md-3">
                 <!-- ===== NEW SOFTWARE ===== -->
                 {% if is_granted("ROLE_ADMIN") %}
-                <a class="btn shadow-1 bg-orange btn-outline-orange floatingBtn" 
+                <a class="btn shadow-1 bg-orange btn-outline-orange floatingBtn d-flex align-items-center justify-content-center" 
                     href="{{path('software_add')}}"
                     style="border: none; border-radius: 50%; height: 4em; width: 4em; box-shadow: 2px 2px 3px #999; padding: 1em;" 
                     type="button">
