--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -38,7 +38,7 @@
                     <div id="listDevice" class="w-100">
                         <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true">
-                                <thead class="w-100 align-middle sticky-scroll">
+                                <thead class="w-100 align-middle">
                                     <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
                                         <th scope="col"></th>
                                         <th scope="col" class="h-100">
