--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,7 @@
             <h2 class="mt-1 mb-1 mt-sm-2 mb-sm-2">Login</h2>
             {% if error %}
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                {{ app.user.role }}
+                {#{{ app.user.role }}#}
             {% endif %}
 
             {% if app.user %}
@@ -52,13 +52,13 @@
             {#
                 Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
                 See https://symfony.com/doc/current/security/remember_me.html
-
+            #}
                 <div class="checkbox mb-3">
                     <label>
                         <input type="checkbox" name="_remember_me"> Remember me
                     </label>
                 </div>
-            #}
+            
 
             <button class="btn bg-orange btn-outline-orange mt-1 mb-1 mt-sm-2 mb-sm-2 w-50" type="submit">
                 Sign in
