--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
 html {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   align-items: center;
   justify-content: center;
   margin: 0;
@@ -12,6 +15,7 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #000000;
   width: 100%;
+  min-height: 100vh;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -32,7 +36,9 @@ h1, h2 {
 
 main {
   width: 100%;
+  min-height: 80vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -99,14 +105,15 @@ a {
   }
 */
 .header {
-  display: flex !important;
   width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   text-align: center;
   padding: 1em;
+  justify-content: space-between;
   font-family: "Open Sans", sans-serif;
+  height: fit-content;
 }
 .header .navbar-brand {
   text-align: center;
@@ -134,8 +141,7 @@ a {
 }
 .navbar .nav-link {
   text-transform: uppercase;
-  font-family: "NotoSansExtraCondensedBold";
-  font-size: larger;
+  font-size: medium;
   font-style: normal;
   letter-spacing: 2px;
   margin: 0 1em 0 1em;
@@ -220,19 +226,9 @@ table.dataTable thead .sorting_desc_disabled:before {
   bottom: 0.5em;
 }
 
-#floatingBtn {
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  cursor: pointer; /* Add a mouse pointer on hover */
-}
-
 .floatingBtn {
   position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
+  bottom: 80px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
@@ -256,11 +252,47 @@ table.dataTable thead .sorting_desc_disabled:before {
 
 .login {
   border-radius: 5px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   box-shadow: 5px 5px 15px 5px #acabab;
+}
+
+.divider:after,
+.divider:before {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #eee;
+}
+
+.dashboard-card {
+  border: none;
+  box-shadow: 0px 0px 2px 2px rgba(172, 171, 171, 0.5058823529);
+}
+
+#uploadZone {
+  position: relative;
+  /*
+  .active{ 
+      border: 4px solid #fff;
+  }
+  */
+}
+
+#uploadZone:before {
+  display: flex;
+  position: absolute;
+  font-family: "FontAwesome";
+  font-size: 10em;
+  color: rgba(172, 171, 171, 0.5058823529);
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 10px;
+  content: "\f0ee";
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }/*# sourceMappingURL=styles.css.map */
