--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -6,8 +6,8 @@ $color4 : #000000;
 
 html {
     width: 100%;
-    height: 100%;
-    //height: fit-content;
+    min-height: 100%;
+    height: fit-content;
     align-items: center;
     justify-content: center;
     margin: 0;
@@ -18,10 +18,11 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: $color4;
     width: 100%;
-    //height: fit-content;
-    //height: 100%;
-    //height: 100vh;
+    min-height: 100vh;
     height: 100%;
+    //height: 100vh;
+    //min-height: 100%;
+    //height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,10 +30,6 @@ body {
     margin: 0;
     padding: 0 !important;
     background-color: $color3;
-}
-
-h1, h2, h3, h4, h5, h6 {
-
 }
 
 h1, h2 {
@@ -45,9 +42,10 @@ h1, h2 {
 
 main {
     width: 100%;
-    //min-height: 80%;
+    min-height: 80vh;
     //height: fit-content;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -133,7 +131,7 @@ a {
 
   
 .header {
-    display: block !important;
+    //display: block !important;
     width: 100%;
     height: fit-content;
     text-align: center;
@@ -173,9 +171,9 @@ a {
     flex-wrap: nowrap;
     .nav-link {
         text-transform: uppercase;
-        font-family: 'NotoSansExtraCondensedBold';
+        //font-family: 'NotoSansExtraCondensedBold';
         //font-weight: 100;
-        font-size: larger;
+        font-size:medium;
         font-style: normal;
         letter-spacing: 2px;
         margin: 0 1em 0 1em;
@@ -274,19 +272,9 @@ table.dataTable thead .sorting_desc_disabled:before {
   bottom: .5em;
 }
 
-#floatingBtn {
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    cursor: pointer; /* Add a mouse pointer on hover */
-  }
-
   .floatingBtn {
     position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
+    bottom: 80px; /* Place the button at the bottom of the page */
     right: 30px; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
@@ -310,8 +298,48 @@ table.dataTable thead .sorting_desc_disabled:before {
     //background-color:#dcdcdc;
     //color: #686868;
     border-radius: 5px;
-    width: fit-content;
+    //width: fit-content;
+    width: 100%;
     height: fit-content;
     -webkit-box-shadow: 5px 5px 15px 5px #acabab; 
     box-shadow: 5px 5px 15px 5px #acabab;
 }
+
+.divider:after,
+.divider:before {
+content: "";
+flex: 1;
+height: 1px;
+background: #eee;
+}
+
+.dashboard-card {
+    border: none;
+    //box-shadow: 5px 5px 15px 5px #acabab;
+    box-shadow: 0px 0px 2px 2px #acabab81;
+    //rgba(0,0,0,0.4)
+}
+
+#uploadZone {
+    position: relative;
+    /*
+    .active{ 
+        border: 4px solid #fff;
+    }
+    */
+}
+  #uploadZone:before {
+    display: flex;
+    position: absolute;
+    font-family: 'FontAwesome';
+    font-size: 10em;
+    color: #acabab81;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 10px;
+    content: "\f0ee";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
