--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Software{% endblock %}
 
 {% block content %}
-    <div class="container d-flex flex-column justify-content-between align-items-center w-100">
+    <div class="container-fluid d-flex flex-column justify-content-between align-items-center w-100 mt-5 mb-5 p-5">
         <h1 class="text-center mt-4 mb-4">Software</h1>
         <section id="softwareSearch"></section>
         <!-- ===== ALERT MESSAGES ===== -->
@@ -30,88 +30,82 @@
                 <!-- ===== UPLOAD MODALS ===== -->
                 {% include 'software/upload_modals.html.twig' %}
                 <!-- ===== SEARCH SOFTWARE IN DB ===== -->
-                {{ form(searchform) }}
+                
+                {% include "software/_filter.html.twig" %}
             </div>
             <div class="col-md-9">
                 <!-- ===== SOFTWARE TABLE PER FAMILY ===== -->
                 <div class="d-flex flex-column space-between">
+                
                 {% for family in families %}
                     
                     <div class="accordion mt-2 mb-4" id="accordionSoftware">
                         
                         <div class="accordion-item">
-                            <h2 class="text-center mt-2 mb-2 accordion-header" id="accordionHeading_{{ family.name }}">
+                            <h2 class="text-center accordion-header mt-2 mb-2" id="accordionHeading_{{ family.name }}">
                                 <!--
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="accordionCollapse_{{ family.name }}" aria-expanded="true" aria-controls="accordionCollapse_{{ family.name }}" style="background-color: #f18741c4; color: white;">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="accordionCollapse_{{ family.name }}" aria-expanded="true" aria-controls="accordionCollapse_{{ family.name }}" style="background-color: #f18741c4; color: white;">
                                     {{ family.name }}
                                 </button>
                                 -->
                                 {{ family.name }}
                             </h2>
+                            <div class="responsive-table accordion-collapse collapse show overflow-auto" id="accordionCollapse_{{ family.name }}" aria-labelledby="accordionHeading_{{ family.name }}" data-bs-parent="#accordionSoftware">
+                                
+                                <table class="table table-striped table-hover" id="softTable_{{ family.name }}">
+                                        <thead class="accordion-item">
+                                            <tr class="accordion-header">
+                                                <th>Filename</th>
+                                                <th>
+                                                    <div class="d-flex flex-nowrap input-group">
+                                                        <span>Version</span>
+                                                        {#<i class="fa-solid fa-arrow-up-a-z btn p-1 mx-1" onclick=sortTable(0)></i>#}
+                                                        <i id="softTableClick_{{ family.name }}" class="fa-solid fa-arrow-up-a-z btn p-1 mx-1 softTableClick"></i>
+                                                    </div>
+                                                </th>
+                                                <th>Creation date</th>
+                                                {% if is_granted("ROLE_ADMIN") %}
+                                                <th></th>
+                                                {% endif %}
+                                            </tr>
+                                        </thead>
+                                        <tbody class="accordion-body">   
+                                        {% for software in softwares %}
+                                            {% if software.family == family.name %}
+                                                <tr>
+                                                    <td>
+                                                        {% if is_granted("ROLE_ADMIN") %}
+                                                            <a 'download' href="{{ asset('uploads/softwares/' ~ software.family ~ '/' ~ software.name) }}">{{software.name}}</a>
+                                                        {% else %}
+                                                            {{software.name}}
+                                                        {% endif %}
+                                                    </td>
+                                                    <td>{{software.version}}</td>
+                                                    <td>{{software.createdAt|date}}</td>
+                                                    {#<td>{{software.updatedAt|date}}</td>#}
+                                                    {% if is_granted("ROLE_ADMIN") %}
+                                                    <td class="text-center">
+                                                        <a href="#" class="btn rounded-1 bg-orange btn-outline-orange press modal-trigger" 
+                                                        data-bs-target="#modal_delete_{{software.id}}"
+                                                        data-id="delete_{{software.id}}"
+                                                        data-title="{{software.name}}"
+                                                        data-bs-toggle="modal"><i class="fa-solid fa-trash"></i></a>
+                                                    </td>
+                                                    {% endif %}
+                                                </tr>
+                                            {% endif %}
+                                        {% endfor %}
+                                            
+                                        </tbody>
+                                </table>
+                                
+
+                            </div>
                         </div>
                         
-
-                        <div class="responsive-table accordion-collapse collapse show overflow-auto" id="accordionCollapse_{{ family.name }}" aria-labelledby="accordionHeading_{{ family.name }}" data-bs-parent="#accordionSoftware">
-                            <table class="table table-striped table-hover" id="softTable_{{ family.name }}">
-                                <!--<div class="accordion mt-2" id="accordionSoftware">-->
-                                    <thead class="accordion-item">
-                                        <tr class="accordion-header">
-                                            <th>Filename</th>
-                                            <th>
-                                                <div class="d-flex flex-nowrap input-group">
-                                                    <span>Version</span>
-                                                    <!--<i class="fa-solid fa-arrow-up-a-z btn p-1 mx-1" onclick=sortTable(0)></i>-->
-                                                    <i id="softTableClick_{{ family.name }}" class="fa-solid fa-arrow-up-a-z btn p-1 mx-1 softTableClick"></i>
-                                                </div>
-                                            </th>
-                                            <th>Creation date</th>
-                                            {% if is_granted("ROLE_ADMIN") %}
-                                            <th></th>
-                                            {% endif %}
-                                        </tr>
-                                    </thead>
-                                    <tbody class="accordion-body">   
-                                    {% for software in softwares %}
-                                        {% if software.family == family.name %}
-                                            <tr>
-                                                <td>
-                                                    {% if is_granted("ROLE_ADMIN") %}
-                                                        <a 'download' href="{{ asset('uploads/softwares/' ~ software.family ~ '/' ~ software.name) }}">{{software.name}}</a>
-                                                    {% else %}
-                                                        {{software.name}}
-                                                    {% endif %}
-                                                </td>
-                                                <td>{{software.version}}</td>
-                                                <td>{{software.createdAt|date}}</td>
-                                                {#<td>{{software.updatedAt|date}}</td>#}
-                                                {% if is_granted("ROLE_ADMIN") %}
-                                                <td class="text-center">
-                                                    <a href="#" class="btn rounded-1 bg-orange btn-outline-orange press modal-trigger" 
-                                                    data-bs-target="#modal_delete_{{software.id}}"
-                                                    data-id="delete_{{software.id}}"
-                                                    data-title="{{software.name}}"
-                                                    data-bs-toggle="modal"><i class="fa-solid fa-trash"></i></a>
-                                                </td>
-                                                {% endif %}
-                                                <!--
-                                                <td class="text-center">
-                                                    <a href="{{path('software_edit', {'id': software.id})}}" class="btn rounded-1 bg-orange press modal-trigger" 
-                                                    data-target=""
-                                                    data-id="{{software.id}}"
-                                                    data-title="{{software.name}}">Edit</a>
-                                                </td>
-                                                -->
-                                            </tr>
-                                        {% endif %}
-                                    {% endfor %}
-                                        
-                                    </tbody>
-                                <!--</div>-->
-                            </table>
-
-                        </div>
                     </div>
                 {% endfor %}
+                
                 </div>
             </div>
         </div>
