--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="footer mt-2 fixed-bottom text-center p-4 bg-light" style="background-color: rgba(0, 0, 0, 0.05);">
+<footer class="footer mt-2 text-center p-4 bg-light" style="background-color: rgba(0, 0, 0, 0.05);">
 © 2022 Copyright : <a class="text-reset fw-bold" href="https://winback.com/">WINBACK</a>
 </footer>
