--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,9 @@
 html {
   width: 100%;
   min-height: 100%;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -15,6 +18,9 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #000000;
   width: 100%;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   min-height: 100vh;
   height: 100%;
   display: flex;
@@ -268,6 +274,9 @@ table.dataTable thead .sorting_desc_disabled:before {
 }
 
 .dashboard-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: none;
   box-shadow: 0px 0px 2px 2px rgba(172, 171, 171, 0.5058823529);
 }
