--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -7,6 +7,7 @@ $color4 : #000000;
 html {
     width: 100%;
     min-height: 100%;
+    min-width: fit-content;
     height: fit-content;
     align-items: center;
     justify-content: center;
@@ -18,6 +19,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: $color4;
     width: 100%;
+    min-width: fit-content;
     min-height: 100vh;
     height: 100%;
     //height: 100vh;
@@ -314,6 +316,9 @@ background: #eee;
 }
 
 .dashboard-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: none;
     //box-shadow: 5px 5px 15px 5px #acabab;
     box-shadow: 0px 0px 2px 2px #acabab81;
