--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script type="text/javascript" src="{{ asset('js/jquery-3.3.1.min.js')}}"></script>
+        <script src="{{ asset('js/jquery-3.3.1.min.js')}}"></script>
         <script src="https://kit.fontawesome.com/06466c4cae.js" crossorigin="anonymous"></script>
         <!--
         <script type="text/javascript" defer>
